--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.79.3",
     "react-native-screens": "~4.11.1",
     "react-native-safe-area-context": "5.4.0",
-    "@expo/vector-icons": "^14.1.0"
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
